array.c: Wrong heap size given to ruby_sized_xfree when freeing shared roots

Fixes [Bug #15953]

Closes: https://github.com/ruby/ruby/pull/2253